--- a/IncrementBuildNumber/IncrementBuildNumber.csproj
+++ b/IncrementBuildNumber/IncrementBuildNumber.csproj
@@ -7,4 +7,8 @@
     <Company />
     <Version>0.0.2.0</Version>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="ilmerge" Version="3.0.29" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 </Project>
