--- a/IncrementBuildNumber/IncrementBuildNumber.csproj
+++ b/IncrementBuildNumber/IncrementBuildNumber.csproj
@@ -8,7 +8,7 @@
 		<Version>0.0.3</Version>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="ilmerge" Version="3.0.29" />
+		<PackageReference Include="ILRepack.Lib.MSBuild" Version="2.1.7" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	</ItemGroup>
 </Project>
